# wasm-prime-finder

./: .editorconfig  Cargo.toml  LICENCE  README.md  index.html  script.js  styles.css
.github/workflows/: deploy.yml
src/: lib.rs
