[package]
name = "prime-finder"
version = "0.1.0"
authors = ["Siqi Yan <syan235711@gamil.com>"]
license = "MIT"
license-file = "LICENCE"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"

[dependencies.web-sys]
version = "0.3.83"
features = [
    'Document', 
    'Element', 
    'HtmlElement', 
    'Node', 
    'Window', 
    'Performance',
    'HtmlInputElement', 
    'HtmlButtonElement', 
    'HtmlParagraphElement'
]
